--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,4 @@
+/* 
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -71,7 +72,7 @@
     --card-rgb: 100, 100, 100;
     --card-border-rgb: 200, 200, 200;
   }
-}
+} */
 
 * {
   box-sizing: border-box;
@@ -83,25 +84,57 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  background: white !important;
 }
 
 body {
-  color: rbg(--foreground-rgb);
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background: white;
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 a {
   color: inherit;
   text-decoration: none;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+} */
+
+.buttonEffect {
+  -webkit-tap-highlight-color: transparent;
+}
+
+/* width */
+.product::-webkit-scrollbar {
+  height: 5px;
+}
+
+/* Track */
+.product::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+.product::-webkit-scrollbar-thumb {
+  background: transparent;
+}
+
+::-webkit-scrollbar {
+  width: 0;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: transparent;
 }
