--- a/styles/globals.css
+++ b/styles/globals.css
@@ -112,17 +112,17 @@ a {
 
 /* width */
 .product::-webkit-scrollbar {
-  height: 5px;
+  height: 10px;
 }
 
 /* Track */
 .product::-webkit-scrollbar-track {
-  background: transparent;
+  background: rgb(218, 218, 218);
 }
 
 /* Handle */
 .product::-webkit-scrollbar-thumb {
-  background: transparent;
+  background: rgb(88, 59, 253);
 }
 
 ::-webkit-scrollbar {
